adicionando template-desafio

--- a/index.html
+++ b/index.html
@@ -1,238 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/css/index.css" />
-    <title>HBO Max</title>
-  </head>
-  <body>
-    <nav class="menu">
-      <a href="index.html" class="menu__logo">
-        <img
-          src="assets/images/hbo-logo.svg"
-          alt="Logotipo HBOMax com o nome da marca"
-          class="menu__logo-image"
-        />
-      </a>
-      <div>
-        <a href="signIn.html" class="menu__item">Entrar</a>
-        <a href="#subscription" class="menu__item menu__item--button button">
-          Assine Agora
-        </a>
-      </div>
-    </nav>
-    <header class="header">
-      <div class="header__content">
-        <div class="header__channels">
-          <img class="header__channel" src="assets/images/hbo.png" alt="HBO" />
-          <img class="header__channel" src="assets/images/dc.png" alt="DC" />
-          <img
-            class="header__channel"
-            src="assets/images/wb.png"
-            alt="Warner Bross"
-          />
-          <img
-            class="header__channel"
-            src="assets/images/cartoon-network_neutral.png"
-            alt="Cartoon Network"
-          />
-          <img
-            class="header__channel"
-            src="assets/images/max_originals.png"
-            alt="Max Originals"
-          />
-        </div>
-        <h1 class="header__title">
-          <span class="header__title--light">Curta as melhores histórias</span>
-          Para todo mundo
-        </h1>
-        <div class="divider"></div>
-        <div class="offer">
-          <p>Assinaturas a partir de</p>
-          <p class="offer__price">
-            R$14,15 <span class="offer__price--small">/mês*</span>
-          </p>
-        </div>
-        <a href="#subscription" class="button button--gradient header__button">
-          Assine agora
-        </a>
-        <p class="text--small">
-          *aplicável ao plano anual com o pagamento antecipado.
-        </p>
-      </div>
-    </header>
-
-    <main>
-      <section id="subscription" class="subscription">
-        <div class="container">
-          <h2 class="title">
-            Conheça nossos planos e economize na assinatura trimestral ou anual
-            com o pagamento antecipado.
-          </h2>
-          <div class="subscription__plans">
-            <div class="subscription__card">
-              <div>
-                <div class="subscription__plan">
-                  <h3>Mobile</h3>
-                  <p class="subscription__price">
-                    R$ 19,90 <span class="text--small">/mês</span>
-                  </p>
-                </div>
-
-                <ul class="subscription__goals">
-                  <li class="subscription__description">
-                    Aproveite em smartphones e tablets, onde quiser.
-                  </li>
-                  <li class="subscription__description">
-                    Assista em 1 tela por vez.
-                  </li>
-                  <li class="subscription__description">
-                    Tenha conteúdo em resolução adaptada para cada dispositivo.
-                  </li>
-                  <li class="subscription__description">
-                    Baixe suas séries e filmes favoritos, assista onde e quando
-                    quiser.
-                  </li>
-                </ul>
-              </div>
-              <button class="button button--gradient">
-                Escolher o Plano Mobile
-              </button>
-            </div>
-
-            <div class="subscription__card">
-              <div>
-                <div class="subscription__plan">
-                  <h3>Multitelas</h3>
-                  <p class="subscription__price">
-                    R$ 27,90 <span class="text--small">/mês</span>
-                  </p>
-                </div>
-
-                <ul>
-                  <li class="subscription__description">
-                    Aproveite em todos os seus dispositivos.
-                  </li>
-                  <li class="subscription__description">
-                    Chromecast e Airplay disponíveis.
-                  </li>
-                  <li class="subscription__description">
-                    Assista em até 3 telas ao mesmo tempo.
-                  </li>
-                  <li class="subscription__description">
-                    Tenha conteúdo em alta definição, com qualidade 4K.
-                  </li>
-                  <li class="subscription__description">
-                    Baixe suas séries e filmes favoritos, assista onde e quando
-                    quiser.
-                  </li>
-                  <li class="subscription__description">
-                    Crie até 5 perfis diferentes.
-                  </li>
-                </ul>
-              </div>
-              <button class="button button--gradient">
-                Escolher o Plano Multitelas
-              </button>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section id="contents" class="contents container">
-        <h2 class="title">Descubra novos universos</h2>
-        <div class="contents__container">
-          <div class="contents__card">
-            <img
-              class="contents__image"
-              src="assets/images/hbo-default_0.webp"
-              alt="HBO"
-            />
-          </div>
-          <div class="contents__card">
-            <img
-              class="contents__image"
-              src="assets/images/MAX-Default.webp"
-              alt="Max Originals"
-            />
-          </div>
-          <div class="contents__card">
-            <img
-              class="contents__image"
-              src="assets/images/DC_Default.webp"
-              alt="DC"
-            />
-          </div>
-          <div class="contents__card">
-            <img
-              class="contents__image"
-              src="assets/images/WB-Default.webp"
-              alt="Warner Bross"
-            />
-          </div>
-          <div class="contents__card">
-            <img
-              class="contents__image"
-              src="assets/images/CN-Default.webp"
-              alt="Cartoon Network"
-            />
-          </div>
-          <div class="contents__card">
-            <img
-              class="contents__image"
-              src="assets/images/UCL-Default.webp"
-              alt="UEFA Champions League"
-            />
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <footer class="footer container">
-      <div>
-        <a class="footer__link" href="https://www.hbomax.com/br/pt/sitemap">
-          Agora na HBO Max
-        </a>
-        <a class="footer__link" href="https://www.hbomax.com/br/pt/coming-soon">
-          Em breve
-        </a>
-        <a class="footer__link" href="https://www.hbomax.com/br/pt/feature">
-          Filme em destaque
-        </a>
-        <a class="footer__link" href="https://www.hbomax.com/br/pt/series"
-          >Séries</a
-        >
-        <a class="footer__link" href="https://help.hbomax.com/br">Ajuda</a>
-      </div>
-      <p class="text--small footer__legal">
-        © 2022 WarnerMedia Direct Latin America, LLC. Todos os direitos
-        reservados. HBO Max é usado sob licença.
-      </p>
-      <div class="footer__social">
-        <a
-          href="https://www.facebook.com/HBOMaxBr/"
-          class="footer__social-link"
-        >
-          <img src="assets/images/fb_0.png" alt="Facebook" />
-        </a>
-        <a href="https://twitter.com/HBOMaxBR" class="footer__social-link">
-          <img src="assets/images/twitter_0.png" alt="Twitter" />
-        </a>
-        <a
-          href="https://www.instagram.com/hbomaxbr/"
-          class="footer__social-link"
-        >
-          <img src="assets/images/instagram_0.png" alt="Instagram" />
-        </a>
-        <a
-          href="https://www.youtube.com/c/hbomaxbr"
-          class="footer__social-link"
-        >
-          <img src="assets/images/youtube_0.png" alt="Youtube" />
-        </a>
-      </div>
-    </footer>
-  </body>
-</html>
+<!-- TODO -->
