--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
-<!-- TODO -->
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/index.css">
+    <title>HBO Max</title>
+</head>
+
+<body>
+
+
+
+    <nav class="menu">
+
+        <a href="index.html" class="menu-logo"><img src="assets/images/hbo-logo.svg" alt="Logo HBO Max - Clique para ir até a página inicial"></a>
+
+        <div>
+            <a href="signIn.html" class="menu-item btn-entrar button">Entrar</a>
+            <a href="#subscription" class="menu-item btn-assine button">Assine Agora</a>
+        </div>
+
+    </nav>
+
+    <header class="header">
+
+        <div class="header-content">
+            <div class="header-canais">
+                <img src="assets/images/hbo.png" alt="">
+                <img src="assets/images/dc.png" alt="">
+                <img src="assets/images/wb.png" alt="">
+                <img src="assets/images/cartoon-network_neutral.png" alt="">
+                <img src="assets/images/max_originals.png" alt="">
+            </div>
+            <h1 class="header-h1"><span class="header-title">Curta as melhores histórias</span>
+             Para todo mundo </h1>
+             <div class="divisor"></div>
+
+             <div class="oferta">
+                <p>Assinatuas a partir de</p>
+                <p class="oferta-preco">R$14,15 <span class="oferta-preco-pequena">/mês*</span></p>
+             </div>
+
+             <a href="#subscription" class="menu-item btn-gradiente button">Assine Agora</a>
+
+             
+        </div>
+
+    </header>
+
+    <main>
+
+        <section>
+
+        </section>
+
+
+        <section>
+
+        </section>
+
+    </main>
+
+    <footer>
+
+    </footer>
+
+</body>
+
+</html>
