--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
                                 </p>
                             </div>
 
-                            <ul>
-                                <li>Aproveite em smartphones e tablets, onde quiser.</li>
-                                <li>Assista em 1 tela por vez.</li>
-                                <li>Tenha conteúdo em resolução adaptada para cada dispositivo.</li>
-                                <li>Baixe suas séries e filmes favoritos, assista onde e quando quiser.</li>
+                            <ul class="beneficios lista-costumizada">
+                                <li class="beneficios-descricao">Aproveite em smartphones e tablets, onde quiser.</li>
+                                <li class="beneficios-descricao">Assista em 1 tela por vez.</li>
+                                <li class="beneficios-descricao">Tenha conteúdo em resolução adaptada para cada dispositivo.</li>
+                                <li class="beneficios-descricao">Baixe suas séries e filmes favoritos, assista onde e quando quiser.</li>
                             </ul>
 
                             <a href="#subscription" class="btn-assine btn-gradiente button">Assine Agora</a>
