--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <p class="oferta-preco">R$14,15 <span class="oferta-preco-pequena">/mês*</span></p>
             </div>
 
-            <a href="#subscription" class="btn-assine btn-gradiente button">Assine Agora</a>
+            <a href="#subscription" class="btn-assine-baixo btn-assine btn-gradiente button">Assine Agora</a>
 
             <div class="plano-anual">
                 <p>*aplicável ao plano anual com o pagamento antecipado.</p>
@@ -117,14 +117,74 @@
         </section>
 
 
-        <section class="descubra">
+        <section class="descubra container">
+
+            <h2 class="text-planos">Descubra novos universos</h2>
+
+            <div class="descubra-container">
+
+                <div class="descubra-cards">
+                    <img class="descubra-imagem" src="assets/images/hbo-default_0.webp" alt="">
+                </div>
+                <div class="descubra-cards">
+                    <img class="descubra-imagem" src="assets/images/MAX-Default.webp" alt="">
+                </div>
+                <div class="descubra-cards">
+                    <img class="descubra-imagem" src="assets/images/DC_Default.webp" alt="">
+                </div>
+                <div class="descubra-cards">
+                    <img class="descubra-imagem" src="assets/images/WB-Default.webp" alt="">
+                </div>
+                <div class="descubra-cards">
+                    <img class="descubra-imagem" src="assets/images/CN-Default.webp" alt="">
+                </div>
+                <div class="descubra-cards">
+                    <img class="descubra-imagem" src="assets/images/UCL-Default.webp" alt="">
+                </div>
+
+
+            </div>
 
         </section>
 
     </main>
 
-    <footer>
+    <footer class="footer container">
 
+        <div>
+
+            <a class="footer-link" href="https://www.hbomax.com/br/pt/sitemap">
+                Agora na HBO Max
+            </a>
+            <a class="footer-link" href="https://www.hbomax.com/br/pt/coming-soon">
+                Em breve
+            </a>
+            <a class="footer-link" href="https://www.hbomax.com/br/pt/feature">
+                Filme em destaque
+            </a>
+            <a class="footer-link" href="https://www.hbomax.com/br/pt/series">Séries</a>
+            <a class="footer-link" href="https://help.hbomax.com/br">Ajuda</a>
+
+        </div>
+
+        <p class="footer-text">© 2022 WarnerMedia Direct Latin America, LLC. Todos os direitos
+            reservados. HBO Max é usado sob licença.</p>
+
+
+        <div class="footer-social">
+            <a href="https://www.facebook.com/HBOMaxBr/" class="footer-social-link">
+                <img src="assets/images/fb_0.png" alt="Facebook" />
+            </a>
+            <a href="https://twitter.com/HBOMaxBR" class="footer-social-link">
+                <img src="assets/images/twitter_0.png" alt="Twitter" />
+            </a>
+            <a href="https://www.instagram.com/hbomaxbr/" class="footer-social-link">
+                <img src="assets/images/instagram_0.png" alt="Instagram" />
+            </a>
+            <a href="https://www.youtube.com/c/hbomaxbr" class="footer-social-link">
+                <img src="assets/images/youtube_0.png" alt="Youtube" />
+            </a>
+        </div>
     </footer>
 
 </body>
