--- a/signIn.html
+++ b/signIn.html
@@ -1,1 +1,89 @@
-<!-- TODO -->
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/signIn.css">
+    <link rel="stylesheet" href="assets/css/global.css">
+    <title>HBO Max - Clone</title>
+</head>
+
+<body>
+
+
+
+    <nav class="menu">
+
+        <a href="index.html" class="menu-logo"><img src="assets/images/hbo-logo.svg"
+                alt="Logo HBO Max - Clique para ir até a página inicial"></a>
+
+        <div>
+            <a href="signIn.html" class="menu-item btn-entrar button">Entrar</a>
+            <a href="#subscription" class="menu-item btn-assine button">Assine Agora</a>
+        </div>
+
+    </nav>
+
+    <main class="conteudo">
+
+        <form class="login-box container">
+            <h1 class="login-titulo">Entrar</h1>
+
+            <label class="login-label"> Você tem uma conta da HBO Max? </label>
+
+            <input class="login-campo" type="email" name="email" id="email" placeholder="Endereço de e-mail">
+
+            <input class="login-campo" type="password" name="password" id="password" placeholder="Senha" minlength="8">
+
+            <div class="login-button">            
+                <button type="submit" class="btn-assine btn-gradiente-plano button">Entrar</button>
+                <a href="#" class="login-link"> Esqueceu a senha? </a>
+            </div>
+        </form>
+
+    </main>
+
+    
+
+    <footer class="footer container">
+
+        <div>
+
+            <a class="footer-link" href="https://www.hbomax.com/br/pt/sitemap">
+                Agora na HBO Max
+            </a>
+            <a class="footer-link" href="https://www.hbomax.com/br/pt/coming-soon">
+                Em breve
+            </a>
+            <a class="footer-link" href="https://www.hbomax.com/br/pt/feature">
+                Filme em destaque
+            </a>
+            <a class="footer-link" href="https://www.hbomax.com/br/pt/series">Séries</a>
+            <a class="footer-link" href="https://help.hbomax.com/br">Ajuda</a>
+
+        </div>
+
+        <p class="footer-text">© 2022 WarnerMedia Direct Latin America, LLC. Todos os direitos
+            reservados. HBO Max é usado sob licença.</p>
+
+
+        <div class="footer-social">
+            <a href="https://www.facebook.com/HBOMaxBr/" class="footer-social-link">
+                <img src="assets/images/fb_0.png" alt="Facebook" />
+            </a>
+            <a href="https://twitter.com/HBOMaxBR" class="footer-social-link">
+                <img src="assets/images/twitter_0.png" alt="Twitter" />
+            </a>
+            <a href="https://www.instagram.com/hbomaxbr/" class="footer-social-link">
+                <img src="assets/images/instagram_0.png" alt="Instagram" />
+            </a>
+            <a href="https://www.youtube.com/c/hbomaxbr" class="footer-social-link">
+                <img src="assets/images/youtube_0.png" alt="Youtube" />
+            </a>
+        </div>
+    </footer>
+
+</body>
+
+</html>
